--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ public
 dist
 sidila-lang/build
 
+# Reports
+sidila-lang/coverage
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
