--- a/sidila-lang/package.json
+++ b/sidila-lang/package.json
@@ -4,6 +4,7 @@
   "description": "Simple Didactic Language",
   "scripts": {
     "compile": "canopy src/grammar/sidila.peg --lang js --output build/peg",
+    "test": "jest",
     "build": "npm run compile && webpack --mode development",
     "release": "npm run compile && webpack --mode production"
   },
@@ -11,5 +12,11 @@
     "canopy": "^0.4.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0"
   }
 }
